# vecnn

./: .gitignore  Cargo.toml  README.md  goals.txt  perf.data.old
.cargo/: config.toml
eval/: README.md  data_dim_to_vp_tree_search_ndc.py  eval.py  get_data.py  graphs.py  i.ipynb  laion_util.py  latex_tables.txt  overview.txt  quick.ipynb  requirements.txt  res10m.py  res10m.txt  results.py  results.txt  results_utils.py  sanity.py  squasher.py  tables.txt
eval/results/: data_dim_to_vp_tree_search_ndc.csv  hnsw_threaded_100k.txt  my_hnsws_threaded.txt  vp_trees_threaded_and_approx.txt
eval/tables/: a10m_id_models_single.tex  a10m_id_models_threaded.tex  a10m_id_models_threaded_by_fixed_ef.tex  compare_10k_vs_10m.tex
eval/vecnneval/: Cargo.toml  curse_of_dimensionality.py  out.txt
eval/vecnneval/src/: main.rs
mlruns/0/: meta.yaml
mlruns/174403575812413793/: meta.yaml
py/: load.ipynb
results/: wishlist.txt
vecnn/: .gitignore  Cargo.toml  TODO.txt  comparison.csv  experiments.csv  experiments2.csv  graph.txt  is_stitching_viable.md  out.txt  rayon_attempt.txt  result.txt
vecnn/benches/: hnsw.rs
vecnn/src/: const_hnsw.rs  dataset.rs  distance.rs  hnsw.rs  hnsw2.rs  lib.rs  nn_descent.rs  relative_nn_descent.rs  schubert_distance.rs  slice_hnsw.rs  slice_hnsw_2.rs  slice_hnsw_par.rs  transition.md  transition.rs  utils.rs  vp_tree.rs
vecnnpy/: Cargo.toml  MANIFEST.in  README.md  experiment.csv  pyproject.toml  table2024-06-28 12:02:13.001523.csv  tree.txt  vecnnpy.pyi 
vecnnpy/experiments/: experiment2024-06-28 12:04:47.411098.csv
vecnnpy/python/vecnn/: __init__.py  __init__.pyi
vecnnpy/python/vecnn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
vecnnpy/rust/: dataset.rs  hnsw.rs  lib.rs  nn_descent.rs  rust_cv.rs  utils.rs  vp_tree.rs
vecnnpy/scripts/: eval.py  eval_models.ipynb  h5.ipynb  hello.csv  laion.py  log.txt  prepare.py  try2.ipynb  tryit.ipynb
vecnnpy/src/: dataset.rs  lib.rs  vp_tree.rs
vecnnpy/vecnnpy/: __init__.py
vptree/: Cargo.toml
vptree/src/: dataset.rs  distance.rs  hnsw.rs  lib.rs  main.rs  transition.rs  vp_tree.rs
