[package]
name = "vecnn"
version = { workspace = true }
edition = "2021"


[features]
default = ["tracking"]
tracking = []
parallel = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
arrayvec = "0.7.4"
heapless = { git = "https://github.com/tadeohepperle/heapless" }
lance-linalg = "0.11.0"
prettytable-rs = "0.10.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"
threadpool = "1.8.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "hnsw"
harness = false
