[package]
name = "vecnn"
version = { workspace = true }
edition = "2021"
[features]
default = ["no_ndc_tracking"] # "tracking", "no_ndc_tracking" 
tracking = []
no_ndc_tracking = []          # "ndc" = number of distance calculations. Saves the atomic fetch_add instructions on the DistanceTracker.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
arrayvec = "0.7.4"
heapless = { git = "https://github.com/tadeohepperle/heapless" }
nanoserde = "0.1.37"
num-traits = "0.2.19"
prettytable-rs = "0.10.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"
strum = { version = "0.26.3", features = ["derive"] }
threadpool = "1.8.1"
core_affinity = "0.8.1"
parking_lot = "0.12.3"
ndarray = "0.16.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "hnsw"
harness = false
