[package]
version.workspace = true
name = "vecnnpy"
edition = "2021"

[lib]
name = "vecnnpy"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.4"
pyo3 = { version = "0.21.1", features = ["abi3-py38", "extension-module"] }
numpy = "0.21"
vecnn-vptree.workspace = true
ndarray = "0.15.6"


[env]
PYO3_PYTHON = "./venv/bin/python"
