[package]
version.workspace = true
name = "vecnnpy"
edition = "2021"

[lib]
name = "_lib"
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
rand = "0.8.4"
pyo3 = { version = "0.21.1", features = ["abi3-py38", "extension-module"] }
numpy = "0.21"
vecnn.workspace = true
ndarray = "0.15.6"


[profile.release-lto]
inherits = "release"
lto = true

[env]
PYO3_PYTHON = "./venv/bin/python"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
